--- a/Finding_Donors_CharityML/finding_donors.ipynb
+++ b/Finding_Donors_CharityML/finding_donors.ipynb
@@ -49,17 +49,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -155,23 +155,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of records: 45222\n",
+      "Individuals making more than $50,000: 0\n",
+      "Individuals making at most $50,000: 0\n",
+      "Percentage of individuals making more than $50,000: 0.0%\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Total number of records\n",
-    "n_records = None\n",
+    "n_records = data['workclass'].count()\n",
     "\n",
     "# TODO: Number of records where individual's income is more than $50,000\n",
-    "n_greater_50k = None\n",
+    "n_greater_50k = data[data.income == '>50k'].income.count()\n",
     "\n",
     "# TODO: Number of records where individual's income is at most $50,000\n",
-    "n_at_most_50k = None\n",
+    "n_at_most_50k = data[data.income == '<50k'].income.count()\n",
     "\n",
     "# TODO: Percentage of individuals whose income is more than $50,000\n",
-    "greater_percent = None\n",
+    "greater_percent = float(n_greater_50k)*100/n_records\n",
     "\n",
     "# Print the results\n",
     "print(\"Total number of records: {}\".format(n_records))\n",
