--- a/Finding_Donors_CharityML/finding_donors.ipynb
+++ b/Finding_Donors_CharityML/finding_donors.ipynb
@@ -173,18 +173,24 @@
     "# TODO: Total number of records\n",
     "n_records = data['workclass'].count()\n",
     "\n",
-    "# TODO: Number of records where individual's income is more than $50,000\n",
-    "n_greater_50k = data[data.income == '>50K'].income.count()\n",
+    "# TODO: Numver of records where individual's income is more than $50,000\n",
+    "n_greater_50k = data[data.income == '>50k'].income.count()\n",
     "\n",
     "# TODO: Number of records where individual's income is at most $50,000\n",
-    "n_at_most_50k = data[data.income == '<=50K'].income.count()\n",
+    "n_at_most_50k = data[data.income == '<=50k'].income.count()\n",
     "\n",
-    "# TODO: Percentage of individuals whose income is more than $50,000\n",
+    "#T TODO: Percentage of individuals whose income is more than $50,000\n",
     "greater_percent = float(n_greater_50k)*100/n_records\n",
     "\n",
     "# Print the results\n",
     "print(\"Total number of records: {}\".format(n_records))\n",
     "print(\"Individuals making more than $50,000: {}\".format(n_greater_50k))\n",
+    "print(\"Individuals making at most $50,000: {}\".format(n_at_most_50k))\n",
+    "print(\"Percentage of Individuals making more than $50,000: {}%\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "print(\"Individuals making at most $50,000: {}\".format(n_at_most_50k))\n",
     "print(\"Percentage of individuals making more than $50,000: {}%\".format(greater_percent))"
    ]
