preparing the data, transforming skewed continuous features

--- a/Finding_Donors_CharityML/finding_donors.ipynb
+++ b/Finding_Donors_CharityML/finding_donors.ipynb
@@ -163,9 +163,9 @@
      "output_type": "stream",
      "text": [
       "Total number of records: 45222\n",
-      "Individuals making more than $50,000: 11208\n",
-      "Individuals making at most $50,000: 34014\n",
-      "Percentage of individuals making more than $50,000: 24.78439697492371%\n"
+      "Individuals making more than $50,000: 0\n",
+      "Individuals making at most $50,000: 0\n",
+      "Percentage of Individuals making more than $50,000: 0.0%\n"
      ]
     }
    ],
@@ -186,13 +186,7 @@
     "print(\"Total number of records: {}\".format(n_records))\n",
     "print(\"Individuals making more than $50,000: {}\".format(n_greater_50k))\n",
     "print(\"Individuals making at most $50,000: {}\".format(n_at_most_50k))\n",
-    "print(\"Percentage of Individuals making more than $50,000: {}%\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"Individuals making at most $50,000: {}\".format(n_at_most_50k))\n",
-    "print(\"Percentage of individuals making more than $50,000: {}%\".format(greater_percent))"
+    "print(\"Percentage of Individuals making more than $50,000: {}%\".format(greater_percent))"
    ]
   },
   {
